# guppirawc99

./: .gitmodules  README.md  meson.build
benchmarks/: iterate.txt  iterate_plot.py  key_comparison.txt
include/: guppiraw.h  guppirawc99.h  meson.build
include/guppirawc99/: calculations.h  directio.h  file.h  header.h  header_key.h  iterate.h  structs.h
src/: calculations.c  guppiraw.c  header.c  iterate.c  meson.build
tests/: header.c  iterate.c  key_comparison.c  main.c  meson.build  peek_file_benchmark.c  read_blockheader.c  write.c
